--- a/QuizNewbye/QuizNewbye.csproj
+++ b/QuizNewbye/QuizNewbye.csproj
@@ -69,7 +69,19 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="Paginas\Questao2.xaml.cs">
+	    <DependentUpon>Questao2.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Paginas\Questao2.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Paginas\Questao1.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Paginas\Resultado.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
